--- a/portfolio.html
+++ b/portfolio.html
@@ -16,185 +16,183 @@
 
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header__wrapper">
-          <nav class="navbar">
-            <a href="./index.html" class="logo"
-              ><span class="logo-primary">Web</span>Studio</a
-            >
-            <ul class="nav__list">
-              <li class="nav__list-item"><a href="#">Studio</a></li>
-              <li class="nav__list-item">
-                <a href="./portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav__list-item"><a href="#">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="address">
-            <ul class="address__list">
-              <li class="address__list-item">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="address__list-item">
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="header__wrapper">
+        <nav class="navbar">
+          <a href="./index.html" class="logo"
+            ><span class="logo-primary">Web</span>Studio</a
+          >
+          <ul class="nav__list">
+            <li class="nav__list-item">
+              <a class="nav__list-link" href="#">Studio</a>
+            </li>
+            <li class="nav__list-item">
+              <a class="nav__list-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav__list-item">
+              <a class="nav__list-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address__list">
+            <li class="address__list-item">
+              <a class="address__list-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address__list-item">
+              <a class="address__list-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main class="main">
-      <div class="container">
-        <section class="portfolio">
-          <h2 hidden>Portfolio</h2>
-          <ul class="portfolio__sort">
-            <li class="portfolio__sort-item">
-              <button class="portfolio__sort-btn active" type="button">
-                All
-              </button>
-            </li>
-            <li>
-              <button class="portfolio__sort-btn" type="button">
-                Web Site
-              </button>
-            </li>
-            <li>
-              <button class="portfolio__sort-btn" type="button">App</button>
-            </li>
-            <li>
-              <button class="portfolio__sort-btn" type="button">Design</button>
-            </li>
-            <li>
-              <button class="portfolio__sort-btn" type="button">
-                Marketing
-              </button>
-            </li>
-          </ul>
-          <ul class="portfolio__items">
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img1.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">
-                  Banking App Interface Concept
-                </h3>
-                <p class="portfolio__item-text">App</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img2.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Cashless Payment</h3>
-                <p class="portfolio__item-text">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img3.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Meditation App</h3>
-                <p class="portfolio__item-text">App</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img4.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Taxi Service</h3>
-                <p class="portfolio__item-text">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img5.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Screen Illustrations</h3>
-                <p class="portfolio__item-text">Design</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img6.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Online Courses</h3>
-                <p class="portfolio__item-text">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img7.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Instagram Stories Concept</h3>
-                <p class="portfolio__item-text">Design</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img8.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Organic Food</h3>
-                <p class="portfolio__item-text">Web Site</p>
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <img
-                src="./images/portfolio-img9.jpg"
-                alt="project image1"
-                class="portfolio__item-img"
-                width="360"
-              />
-              <div class="portfolio__item-wrapper">
-                <h3 class="portfolio__item-title">Fresh Coffee</h3>
-                <p class="portfolio__item-text">Web Site</p>
-              </div>
-            </li>
-          </ul>
-        </section>
-      </div>
+      <section class="portfolio">
+        <h2 hidden>Portfolio</h2>
+        <ul class="portfolio__sort">
+          <li class="portfolio__sort-item">
+            <button class="portfolio__sort-btn active" type="button">
+              All
+            </button>
+          </li>
+          <li>
+            <button class="portfolio__sort-btn" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="portfolio__sort-btn" type="button">App</button>
+          </li>
+          <li>
+            <button class="portfolio__sort-btn" type="button">Design</button>
+          </li>
+          <li>
+            <button class="portfolio__sort-btn" type="button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="portfolio__items">
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img1.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">
+                Banking App Interface Concept
+              </h3>
+              <p class="portfolio__item-text">App</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img2.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Cashless Payment</h3>
+              <p class="portfolio__item-text">Marketing</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img3.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Meditation App</h3>
+              <p class="portfolio__item-text">App</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img4.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Taxi Service</h3>
+              <p class="portfolio__item-text">Marketing</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img5.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Screen Illustrations</h3>
+              <p class="portfolio__item-text">Design</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img6.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Online Courses</h3>
+              <p class="portfolio__item-text">Marketing</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img7.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Instagram Stories Concept</h3>
+              <p class="portfolio__item-text">Design</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img8.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Organic Food</h3>
+              <p class="portfolio__item-text">Web Site</p>
+            </div>
+          </li>
+          <li class="portfolio__item">
+            <img
+              src="./images/portfolio-img9.jpg"
+              alt="project image1"
+              class="portfolio__item-img"
+              width="360"
+            />
+            <div class="portfolio__item-wrapper">
+              <h3 class="portfolio__item-title">Fresh Coffee</h3>
+              <p class="portfolio__item-text">Web Site</p>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo-footer"
-          ><span class="logo-primary">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="./index.html" class="logo-footer"
+        ><span class="logo-primary">Web</span>Studio</a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
