--- a/index.html
+++ b/index.html
@@ -21,27 +21,31 @@
           <a href="./index.html" class="logo"
             ><span class="logo-primary">Web</span>Studio</a
           >
-          <ul class="nav__list">
+          <ul class="nav__list list">
             <li class="nav__list-item">
-              <a class="nav__list-link" href="#">Studio</a>
+              <a class="nav__list-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav__list-item">
-              <a class="nav__list-link" href="./portfolio.html">Portfolio</a>
+              <a class="nav__list-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="nav__list-item">
-              <a class="nav__list-link" href="#">Contacts</a>
+              <a class="nav__list-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="address__list">
+          <ul class="address__list list">
             <li class="address__list-item">
-              <a class="address__list-link" href="mailto:info@devstudio.com"
+              <a
+                class="address__list-link link"
+                href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="address__list-item">
-              <a class="address__list-link" href="tel:+110001111111"
+              <a class="address__list-link link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
