Some minor edits

--- a/index.html
+++ b/index.html
@@ -16,40 +16,36 @@
 
   <body>
     <header class="header">
-        <nav class="navbar">
-          <a href="./index.html" class="logo"
-            ><span class="logo-primary">Web</span>Studio</a
-          >
-          <ul class="nav__list list">
-            <li class="nav__list-item">
-              <a class="nav__list-link link" href="./index.html">Studio</a>
-            </li>
-            <li class="nav__list-item">
-              <a class="nav__list-link link" href="./portfolio.html"
-                >Portfolio</a
-              >
-            </li>
-            <li class="nav__list-item">
-              <a class="nav__list-link link" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="address__list list">
-            <li class="address__list-item">
-              <a
-                class="address__list-link link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address__list-item">
-              <a class="address__list-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+      <nav class="navbar">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-primary">Studio</span></a
+        >
+        <ul class="nav__list list">
+          <li class="nav__list-item">
+            <a class="nav__list-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__list-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__list-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="address">
+        <ul class="address__list list">
+          <li class="address__list-item">
+            <a class="address__list-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address__list-item">
+            <a class="address__list-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
     <main class="main">
       <section class="hero">
@@ -57,8 +53,8 @@
         <button class="main-btn" type="button">Order Service</button>
       </section>
       <section class="advantages">
-        <h2 hidden>advantages</h2>
-        <ul class="advantages__items">
+        <h2 class="advantages-title" hidden>advantages</h2>
+        <ul class="advantages__items list">
           <li class="advantages__item">
             <h3 class="advantages__item-title">Strategy</h3>
             <p class="advantages__item-text">
@@ -91,7 +87,7 @@
       </section>
       <section class="about">
         <h2 class="about-title">What are we doing</h2>
-        <ul class="about__products">
+        <ul class="about__products list">
           <li class="about__product">
             <img
               src="./images/about-1.jpg"
@@ -120,41 +116,33 @@
       </section>
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team__items">
+        <ul class="team__items list">
           <li class="team__item">
             <img src="./images/team-img1.jpg" alt="team member1" width="264" />
-            <div class="team__item-wrapper">
-              <h3 class="team__item-name">Mark Guerrero</h3>
-              <p class="team__item-title">Product Designer</p>
-            </div>
+            <h3 class="team__item-name">Mark Guerrero</h3>
+            <p class="team__item-title">Product Designer</p>
           </li>
           <li class="team__item">
             <img src="./images/team-img2.jpg" alt="team member2" width="264" />
-            <div class="team__item-wrapper">
-              <h3 class="team__item-name">Tom Ford</h3>
-              <p class="team__item-title">Frontend Developer</p>
-            </div>
+            <h3 class="team__item-name">Tom Ford</h3>
+            <p class="team__item-title">Frontend Developer</p>
           </li>
           <li class="team__item">
             <img src="./images/team-img3.jpg" alt="team member3" width="264" />
-            <div class="team__item-wrapper">
-              <h3 class="team__item-name">Camila Garcia</h3>
-              <p class="team__item-title">Marketing</p>
-            </div>
+            <h3 class="team__item-name">Camila Garcia</h3>
+            <p class="team__item-title">Marketing</p>
           </li>
           <li class="team__item">
             <img src="./images/team-img4.jpg" alt="team member4" width="264" />
-            <div class="team__item-wrapper">
-              <h3 class="team__item-name">Daniel Wilson</h3>
-              <p class="team__item-title">UI Designer</p>
-            </div>
+            <h3 class="team__item-name">Daniel Wilson</h3>
+            <p class="team__item-title">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-footer"
-        ><span class="logo-primary">Web</span>Studio</a
+      <a href="./index.html" class="logo link"
+        >Web<span class="logo-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
